mediafusion/ingressroute-mediafusion.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediafusion.${dns_domain}
  namespace: mediafusion
spec:
  routes:
    - match: Host(`mediafusion.${dns_domain}`) && (PathPrefix(`/streaming_provider`) || PathPrefix(`/poster`) || PathPrefix(`/configure`) || PathPrefix(`/static`) || PathRegexp(`manifest.json$`))
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon-static
          namespace: traefik
    - match: Host(`mediafusion.${dns_domain}`) && (PathPrefix(`/{something:.+}/catalog/{else:.+}`) || PathPrefix(`/catalog`))
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon-cached
          namespace: traefik
    # This is a scrape / search - testing rate-limit on white zombie (tt0023694)
    - match: Host(`mediafusion.${dns_domain}`) && PathRegexp(`/{something:.+}meta/movie/tt0023694.json{else:.*}`)
      priority: 100
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-meta
    # This is a scrape / search
    - match: Host(`mediafusion.${dns_domain}`) && PathPrefix(`/{something:.+}/meta/{else:.+}`)
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon-scrape
          namespace: traefik  
    # This is a stream
    - match: Host(`mediafusion.${dns_domain}`) && PathPrefix(`/{something:.+}/stream{else:.+}`)
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon-stream
          namespace: traefik                    
    - match: Host(`mediafusion.${dns_domain}`)
      kind: Rule
      services:
        - name: mediafusion
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
